apps/adsb/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adsb-feed
  namespace: adsb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adsb-feed
  template:
    metadata:
      labels:
        app: adsb-feed
    spec:
      volumes:
        - name: globe-history
          persistentVolumeClaim:
            claimName: adsb-feed-globe-history
        - name: collectd
          persistentVolumeClaim:
            claimName: adsb-feed-collectd
      containers:
        - name: ultrafeeder
          volumeMounts:
            - name: globe-history
              mountPath: /var/globe_history
            - name: collectd
              mountPath: /var/lib/collectd
          image: ghcr.io/sdr-enthusiasts/docker-adsb-ultrafeeder:telegraf-build-957
          ports:
            - containerPort: 30005

        - name: mqtt-bridge
          image: eclipse-mosquitto
          command:
            - sh
            - -c
            - mosquitto_sub -h home-emqx-enterprise.home.svc.cluster.local -t stream1090 -u stream1090 -P stream1090 -i stream1090_sub | nc localhost 30001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piaware
  namespace: adsb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: piaware
  template:
    metadata:
      labels:
        app: piaware
    spec:
      containers:
        - name: piaware
          image: ghcr.io/sdr-enthusiasts/docker-piaware:latest-build-640@sha256:c367ae029059499c2a41902b17e82f48cfae4b07ca637c979b5a9bc9c8f69eca
---
apiVersion: v1
kind: Service
metadata:
  name: ultrafeeder
  namespace: adsb
spec:
  selector:
    app: adsb-feed
  ports:
    - port: 30005
      targetPort: 30005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fr24
  namespace: adsb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fr24
  template:
    metadata:
      labels:
        app: fr24
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: fr24
          image: ghcr.io/sdr-enthusiasts/docker-flightradar24:latest-build-825@sha256:12f77e02e9458bdd9c3ab26fc66be08a5d437395611c8bcc97d88342d7beef2f
          ports:
            - containerPort: 8754
---
---
apiVersion: v1
kind: Service
metadata:
  name: adsb-feed
  labels:
    app: adsb-feed
spec:
  selector:
    app: adsb-feed
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics-readsb
      port: 9273
      targetPort: 9273
    - name: metrics-autogain
      port: 9274
      targetPort: 9274

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adsb-feed
  annotations:
    external-dns.alpha.kubernetes.io/target: "tunnel.2411.house"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: ADS-B
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
  #  - secretName: adsb-tls-certificate
  #    hosts:
  #      - adsb.2411.house
  rules:
    - host: adsb.2411.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adsb-feed
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adsb-feed-graphs-rewrite
  annotations:
    external-dns.alpha.kubernetes.io/target: "tunnel.2411.house"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  #  cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /graphs1090/$1
spec:
  ingressClassName: nginx
  #tls:
  #  - secretName: adsb-tls-certificate
  #    hosts:
  #      - adsbgraphs.2411.house
  rules:
    - host: adsbgraphs.2411.house
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: adsb-feed
                port:
                  number: 80
